# youtube-analytics-project_ryfe

./: pyproject.toml
src/: channel.py  playlist.py  video.py
